--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,7 +1,6 @@
 .header {
     display: grid;
     grid-auto-flow: column;
-    /* margin: 0.25rem; */
     align-items: center;
    background-color: rgb(230, 222, 214);
    padding-left: 3rem;
@@ -12,20 +11,23 @@
 .logo {
     width: 150px;
     height: fit-content;
-    border-radius: 10rem;
     border: solid black;
-    /* margin-left: 3rem;   */
+    -moz-box-shadow: 10px 10px 5px #ccc;
+    -webkit-box-shadow: 10px 10px 5px #ccc;
+    box-shadow: 10px 10px 5px #ccc;
+    -moz-border-radius:25px;
+    -webkit-border-radius:25px;
+    border-radius:25px;
 }
 
+
+
 .moto {
-    /* position: absolute; */
     top: 50%; 
     right: 50%;
-    /* transform: translate(50%,-50%); */
     text-transform: uppercase;
     font-family: verdana;
     font-size: 3rem;
-    /* font-weight: 700; */
     color: #f5f5f5;
     text-shadow: 1px 1px 1px #919191,
         1px 2px 1px #919191,
