--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -9,7 +9,7 @@
 
 
 .logo {
-    width: 150px;
+    width: 120px;
     height: fit-content;
     border: solid black;
     -moz-box-shadow: 10px 10px 5px #ccc;
@@ -28,7 +28,7 @@
     text-transform: uppercase;
     font-family: verdana;
     font-size: 3rem;
-    color: #f5f5f5;
+    color: #5b4444;
     text-shadow: 1px 1px 1px #919191,
         1px 2px 1px #919191,
         1px 3px 1px #919191,
@@ -43,5 +43,12 @@
     1px 22px 10px rgba(16,16,16,0.2),
     1px 25px 35px rgba(16,16,16,0.2),
     1px 30px 60px rgba(16,16,16,0.4);
+}
+
+.userLogo {
+    width: 80px;
+    border-radius: 50%;
+    border: solid black 2px;
+    
 }
 
