--- a/src/Components/css/SignUpForm.css
+++ b/src/Components/css/SignUpForm.css
@@ -29,11 +29,25 @@ html {
 .radio {
   display: grid;
   grid-auto-flow: column;
+  height: 50px;
+  width: auto;
+  font-family: Sen, sans-serif;
+  font-size: 15px;
+  letter-spacing: 2px;
+  margin-top: 5px;
 }
 
 .radioButton {
-  display: flex;
-  padding: 0.5rem;
+  width: 20px;
+  height: 20px;
+}
+
+.radio label {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 15%;
+  border-radius: 10px;
+  margin-bottom: 0.7rem;
 }
 
 /* Form */
