--- a/src/Components/css/Home.css
+++ b/src/Components/css/Home.css
@@ -5,7 +5,7 @@
 
 .search-flight {
   background: transparent
-    url("http://cdn.onlinewebfonts.com/svg/img_367247.png") no-repeat center;
+    url("http://cdn.onlinewebfonts.com/svg/img_367247.png") no-repeat right 2px;
   background-size: 20px;
   margin: 10px;
 }
@@ -28,6 +28,7 @@
 
 .wrapper {
     display: grid;
+    grid-auto-flow: column;
     align-items: center;
     justify-self: center;
     border: 3px solid blue;
