--- a/src/Components/css/Home.css
+++ b/src/Components/css/Home.css
@@ -21,10 +21,10 @@
     height: 50px;
 }
 
-/* .search-date{
-    padding-left: 4rem;
-    margin: 0.5rem;
-} */
+.search-form {
+    display: grid;
+    grid-auto-flow: column;
+}
 
 .wrapper {
     display: grid;
