--- a/src/Components/css/Header.css
+++ b/src/Components/css/Header.css
@@ -42,7 +42,6 @@
   margin: 0.5rem;
 }
 
-
 .dropbtn {
   cursor: pointer;
 }
@@ -57,7 +56,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -68,7 +67,9 @@
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -78,7 +79,7 @@
   background-color: #3e8e41;
 }
 
-.my-account{
+.my-account {
   position: absolute;
   top: 20px;
 }
